--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 before_script:
 - unset _JAVA_OPTIONS
-- 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then bash ./travis/run_on_pull_requests; fi'
+- 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then bash ../travis/run_on_pull_requests; fi'
 - cd finish
 script:
 - mvn clean install
